--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "travel_month = str('January # \"January\""
+    "travel_month = str('January\") # \"January\""
    ]
   },
   {
